--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ https://templatemo.com/tm-531-reflux
                             </form>s
                             <div class="isotope-box">
                                 <div class="isotope-item" data-type="trajectory">
-                                    <figure class="snip1321" ondblclick="location.href='https://arxiv.org/pdf/2203.13777.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2203.13777.pdf', '_blank');">
                                         <img src="assets/images/mid.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Stochastic Trajectory Prediction via Motion Indeterminacy Diffusion</h4>
@@ -253,7 +253,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="reid">
-                                    <figure class="snip1321" ondblclick="location.href='https://chengy12.github.io/files/TIP-19329-2018.R2.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/TIP-19329-2018.R2.pdf', '_blank');">
                                         <img src="assets/images/tip19.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Spatial-Temporal Attention-aware Learning for Video-based Person Re-identification</h4>
@@ -262,7 +262,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="action">
-                                    <figure class="snip1321" ondblclick="location.href='https://chengy12.github.io/files/Probabilistic_Temporal_Modeling_for_Unintentional_Action_Localization.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/Probabilistic_Temporal_Modeling_for_Unintentional_Action_Localization.pdf', '_blank');">
                                         <img src="assets/images/tip2022a.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Probabilistic Temporal Modeling for Unintentional Action Localization</h4>
@@ -271,7 +271,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="action">
-                                    <figure class="snip1321" ondblclick="location.href='https://chengy12.github.io/files/Unintentional_Action_Localization_via_Counterfactual_Examples.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/Unintentional_Action_Localization_via_Counterfactual_Examples.pdf', '_blank');">
                                         <img src="assets/images/tip2022_b.png" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Unintentional Action Localization via Counterfactual Examples</h4>
@@ -280,7 +280,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="action">
-                                    <figure class="snip1321" ondblclick="location.href='https://sites.google.com/view/finediving';">
+                                    <figure class="snip1321" ondblclick="window.open('https://sites.google.com/view/finediving', '_blank');">
                                         <img src="assets/images/finediving.png" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>FineDiving: A Fine-grained Dataset for Procedure-aware Action Quality Assessment</h4>
@@ -289,7 +289,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="trajectory">
-                                    <figure class="snip1321" ondblclick="location.href='https://arxiv.org/pdf/2107.14202.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2107.14202.pdf', '_blank');">
                                         <img src="assets/images/causal.png" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Human Trajectory Prediction via Counterfactual Analysis</h4>
@@ -298,7 +298,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="trajectory">
-                                    <figure class="snip1321" ondblclick="location.href='https://arxiv.org/pdf/2107.14204.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2107.14204.pdf', '_blank');">
                                         <img src="assets/images/model_dis.png" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Personalized Trajectory Prediction via Distribution Discrimination</h4>
@@ -307,7 +307,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="causality">
-                                    <figure class="snip1321" ondblclick="location.href='https://arxiv.org/abs/2108.08728';">
+                                    <figure class="snip1321" ondblclick="window.open('https://arxiv.org/abs/2108.08728', '_blank');">
                                         <img src="assets/images/CAL.png" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Counterfactual Attention Learning for Fine-Grained Visual Categorization and Re-identification</h4>
@@ -316,7 +316,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="reid">
-                                    <figure class="snip1321" ondblclick="location.href='https://chengy12.github.io/files/TIP-24326-2021R2.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/TIP-24326-2021R2.pdf', '_blank');">
                                         <img src="assets/images/apnet.png" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Person Re-identification via Attention Pyramid</h4>
@@ -325,7 +325,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="reid">
-                                    <figure class="snip1321" ondblclick="location.href='https://chengy12.github.io/files/0648.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/0648.pdf', '_blank');">
                                         <img src="assets/images/0648.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Temporal Coherence or Temporal Motion: Which is More Critical for Video-based Person Re-identification?</h4>
@@ -334,7 +334,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="adaptation">
-                                    <figure class="snip1321" ondblclick="location.href='https://chengy12.github.io/files/0645.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/0645.pdf', '_blank');">
                                         <img src="assets/images/framework_0645.png" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Deep Credible Metric Learning for Unsupervised Domain Adaptation Person Re-identification</h4>
@@ -352,7 +352,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div> -->
                                 <div class="isotope-item" data-type="reid">
-                                    <figure class="snip1321" ondblclick="location.href='https://chengy12.github.io/files/1046_camera_ready_final.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/1046_camera_ready_final.pdf', '_blank');">
                                         <img src="assets/images/1046.PNG" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Self-Critical Attention Learning for Person Re-Identification</h4>
@@ -361,7 +361,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="adaptation">
-                                    <figure class="snip1321" ondblclick="location.href='https://arxiv.org/pdf/2210.01253.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2210.01253.pdf', '_blank');">
                                         <img src="assets/images/PLOT.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Prompt Learning with Optimal Transport for Vision-Language Models</h4>
@@ -370,7 +370,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="adaptation">
-                                    <figure class="snip1321" ondblclick="location.href='https://arxiv.org/pdf/2301.04265.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2301.04265.pdf', '_blank');">
                                         <img src="assets/images/advalign.png" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>Adversarial Alignment for Source Free Object Detection</h4>
@@ -379,7 +379,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="adaptation">
-                                    <figure class="snip1321" ondblclick="location.href='https://denseclip.ivg-research.xyz';">
+                                    <figure class="snip1321" ondblclick="window.open('https://denseclip.ivg-research.xyz', '_blank');">
                                         <img src="assets/images/denseclip.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4>DenseCLIP: Language-Guided Dense Prediction with Context-Aware Prompting</h4>
@@ -388,7 +388,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="causality">
-                                    <figure class="snip1321" ondblclick="location.href='https://arxiv.org/pdf/2210.13647.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2210.13647.pdf', '_blank');">
                                         <img src="assets/images/tdrl3.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4> Temporally Disentangled Representation Learning</h4>
@@ -397,7 +397,7 @@ https://templatemo.com/tm-531-reflux
                                     </figure>
                                 </div>
                                 <div class="isotope-item" data-type="causality">
-                                    <figure class="snip1321" ondblclick="location.href='https://proceedings.mlr.press/v162/kong22a/kong22a.pdf';">
+                                    <figure class="snip1321" ondblclick="window.open('https://proceedings.mlr.press/v162/kong22a/kong22a.pdf', '_blank');">
                                         <img src="assets/images/partial3.jpg" alt="sq-sample26" />
                                         <figcaption>
                                             <h4> Partial Disentanglement for Domain Adaptation</h4>
