--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2023-02:</b> 3 papers on causality, trajectory prediction, and prompt learning are accepted by <a href="https://cvpr2023.thecvf.com/">CVPR'2023</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2023-01:</b> 2 papers on prompt learning (<a href="https://arxiv.org/abs/2210.01253">PLOT</a> as <strong>Spotlight</strong>) and video understanding are accepted by <a href="https://iclr.cc/">ICLR'2023</a>.
                             </li>
                             <li style="margin: 5px;">
