--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2023-03:</b> Our paper using a causal perspective to understand MAE is selected as a <b>highlight (top 2.5%)</b> at <a href="https://cvpr2023.thecvf.com/">CVPR'2023</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2023-02:</b> 3 papers on causality, trajectory prediction, and prompt learning are accepted by <a href="https://cvpr2023.thecvf.com/">CVPR'2023</a>.
                             </li>
                             <li style="margin: 5px;">
@@ -1002,7 +1005,7 @@ https://templatemo.com/tm-531-reflux
                                 <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR and so on.
                             </li>
                             <li style="margin: 5px;">
-                                <b>Journal Reviewer:</b> TIP, IJCV, TMM, TCSVT and so on.
+                                <b>Journal Reviewer:</b> TPAMI, TIP, IJCV, TMM, TCSVT and so on.
                             </li>
                         </p>
                     </div>
