--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
-                                <b>2023-03:</b> Our paper using a causal perspective to understand MAE is selected as a <b>highlight (top 2.5%)</b> at <a href="https://cvpr2023.thecvf.com/">CVPR'2023</a>.
+                                <b>2023-03:</b> Our paper using a causal perspective to understand MAE is selected as <b>Highlight (top 2.5%)</b> at <a href="https://cvpr2023.thecvf.com/">CVPR'2023</a>.
                             </li>
                             <li style="margin: 5px;">
                                 <b>2023-02:</b> 3 papers on causality, trajectory prediction, and prompt learning are accepted by <a href="https://cvpr2023.thecvf.com/">CVPR'2023</a>.
@@ -121,9 +121,6 @@ https://templatemo.com/tm-531-reflux
                             <li style="margin: 5px;">
                                 <b>2022-04:</b> 2 paper on video understanding are accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
                             </li>
-                            <!--                             <li style="margin: 5px;">
-                                <b>2022-03:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
-                            </li> -->
                             <li style="margin: 5px;">
                                 <b>2022-03:</b> 3 paper (including 1 <strong>oral</strong>) are accepted by <a href="https://cvpr2022.thecvf.com/">CVPR'2022</a>.
                             </li>
@@ -247,8 +244,35 @@ https://templatemo.com/tm-531-reflux
                                     <span>Transfer Learning</span></label>
                                 <label><input type="radio" data-type="*" name="isotope-filter" />
                                     <span>All</span></label>
-                            </form>s
+                            </form>
                             <div class="isotope-box">
+                                <div class="isotope-item" data-type="trajectory">
+                                    <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/Bosampler.pdf', '_blank');">
+                                        <img src="assets/images/bosampler.png" alt="sq-sample26" />
+                                        <figcaption>
+                                            <h4>Unsupervised Sampling Promoting for Stochastic Human Trajectory Prediction</h4>
+                                            <span>We propose to formualte the sampling process with Baysesian optimization to promote stochasitic human trajectory prediction in an unsupervised manner.</span>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                                <div class="isotope-item" data-type="causality">
+                                    <figure class="snip1321" ondblclick="window.open('https://openreview.net/pdf?id=xnHML8u6GYk', '_blank');">
+                                        <img src="assets/images/causal_mae.png" alt="sq-sample26" />
+                                        <figcaption>
+                                            <h4>Understanding Masked Autoencoders via Hierarchical Latent Variable Models</h4>
+                                            <span>We propose a causal perspective to understand the underlying mechanism of MAE to identify latent variables in the hierarchical model.</span>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                                <div class="isotope-item" data-type="action">
+                                    <figure class="snip1321" ondblclick="window.open('https://openreview.net/pdf?id=RlPmWBiyp6w', '_blank');">
+                                        <img src="assets/images/gain.png" alt="sq-sample26" />
+                                        <figcaption>
+                                            <h4>GAIN: On the Generalization of Instructional Action Understanding</h4>
+                                            <span>We present a benchmark, named GAIN, to analyze the generalizability of instructional action understanding models.</span>
+                                        </figcaption>
+                                    </figure>
+                                </div>
                                 <div class="isotope-item" data-type="trajectory">
                                     <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2203.13777.pdf', '_blank');">
                                         <img src="assets/images/mid.jpg" alt="sq-sample26" />
@@ -430,6 +454,27 @@ https://templatemo.com/tm-531-reflux
                         <p>
                             <ul id="list">
                                 <li style="margin: 5px;">
+                                    <b>Guangyi Chen*</b>, Zhenhao Chen*, Shunxing Fan, Kun Zhang,
+                                    <a href="https://chengy12.github.io/files/Bosampler.pdf">Unsupervised Sampling Promoting for Stochastic Human Trajectory Prediction</a>,
+                                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023.
+                                    <a href="https://github.com/viewsetting/Unsupervised_sampling_promoting">[Code]</a>
+                                    <p></p>
+                                </li>
+                                <li style="margin: 5px;">
+                                    Lingjing Kong, Martin Q. Ma, <b>Guangyi Chen</b>, Eric P. Xing, Yuejie Chi, Louis-Philippe Morency, Kun Zhang,
+                                    <a href="https://openreview.net/pdf?id=xnHML8u6GYk">Understanding Masked Autoencoders via Hierarchical Latent Variable Models</a>,
+                                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, <strong style="color: #8c363e;">Highlight</strong>.
+                                    [Code]
+                                    <p></p>
+                                </li>
+                                <li style="margin: 5px;">
+                                    Sheng Zhang, Salman Khan, Zhiqiang Shen, Muzammal Naseer, Guangyi Chen, Fahad Khan, 
+                                    <a href="https://arxiv.org/pdf/2212.05590.pdf">PromptCAL: Contrastive Affinity Learning via Auxiliary Prompts for Generalized Novel Category Discovery</a>,
+                                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023.
+                                    <a href="https://github.com/sheng-eatamath/PromptCAL">[Code]</a>
+                                    <p></p>
+                                </li>
+                                <li style="margin: 5px;">
                                     <b>Guangyi Chen</b>, Weiran Yao, Xiangchen Song, Xinyue Li, Yongming Rao, Kun Zhang,
                                     <a href="https://arxiv.org/pdf/2210.01253.pdf">PLOT: Prompt Learning with Optimal Transport for Vision-Language Models</a>,
                                     <em>The Eleventh International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023, <strong style="color: #8c363e;">Spotlight</strong>.
@@ -446,7 +491,7 @@ https://templatemo.com/tm-531-reflux
                                 <li style="margin: 5px;">
                                     Qiaosong Chu, Shuyan Li, <b>Guangyi Chen</b>, Kai Li, Xiu Li,
                                     <a href="https://arxiv.org/pdf/2301.04265.pdf">Adversarial Alignment for Source Free Object Detection</a>,
-                                    <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>)</em>, 2023,<strong style="color: #8c363e;">Oral</strong>.
+                                    <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>)</em>, 2023, <strong style="color: #8c363e;">Oral</strong>.
                                     <a href="https://github.com/ChuQiaosong/Sourcefree/">[Code]</a>
                                     <p></p>
                                 </li>
