--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@ https://templatemo.com/tm-531-reflux
                     <div class="row">
                         <div class="isotope-wrapper">
                             <form class="isotope-toolbar">
+                                <label><input type="radio" data-type="*" name="isotope-filter" />
+                                    <span>All</span></label>
                                 <label><input type="radio" data-type="reid" checked="" name="isotope-filter" />
                                     <span>Person ReID</span></label>
                                 <label><input type="radio" data-type="trajectory" name="isotope-filter" />
@@ -242,8 +244,8 @@ https://templatemo.com/tm-531-reflux
                                     <span>Causal Representaion Learning</span></label>
                                 <label><input type="radio" data-type="adaptation" name="isotope-filter" />
                                     <span>Transfer Learning</span></label>
-                                <label><input type="radio" data-type="*" name="isotope-filter" />
-                                    <span>All</span></label>
+                                <!-- <label><input type="radio" data-type="*" name="isotope-filter" />
+                                    <span>All</span></label> -->
                             </form>
                             <div class="isotope-box">
                                 <div class="isotope-item" data-type="trajectory">
