--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2023-04:</b> 1 paper on graph representation learning is accepted by <a href="https://icml.cc/">ICML'2023</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2023-03:</b> Our paper using a causal perspective to understand MAE is selected as <b>Highlight (top 2.5%)</b> at <a href="https://cvpr2023.thecvf.com/">CVPR'2023</a>.
                             </li>
                             <li style="margin: 5px;">
