--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@ https://templatemo.com/tm-531-reflux
                                 </li>
                                 <li style="margin: 5px;">
                                     Lingjing Kong, Martin Q. Ma, <b>Guangyi Chen</b>, Eric P. Xing, Yuejie Chi, Louis-Philippe Morency, Kun Zhang,
-                                    <a href="https://openreview.net/pdf?id=xnHML8u6GYk">Understanding Masked Autoencoders via Hierarchical Latent Variable Models</a>,
-                                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, <strong style="color: #8c363e;">Highlight</strong>.
+                                    <a href="https://chengy12.github.io/files/mae_cvpr.pdf">Understanding Masked Autoencoders via Hierarchical Latent Variable Models</a>,
+                                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023, <strong style="color: #8c363e;">Highlight</strong>.
                                     [Code]
                                     <p></p>
                                 </li>
@@ -497,7 +497,7 @@ https://templatemo.com/tm-531-reflux
                                     Qiaosong Chu, Shuyan Li, <b>Guangyi Chen</b>, Kai Li, Xiu Li,
                                     <a href="https://arxiv.org/pdf/2301.04265.pdf">Adversarial Alignment for Source Free Object Detection</a>,
                                     <em>Thirty-Seventh AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>)</em>, 2023, <strong style="color: #8c363e;">Oral</strong>.
-                                    <a href="https://github.com/ChuQiaosong/Sourcefree/">[Code]</a>
+                                    <a href="https://github.com/ChuQiaosong/AASFOD">[Code]</a>
                                     <p></p>
                                 </li>
                                 <li style="margin: 5px;">
