updates research topics

--- a/index_copy_15JUN2023.html
+++ b/index_copy_15JUN2023.html
@@ -82,7 +82,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="left">
                         <p>
-                            I am currently a Postdoctoral Research Fellow in MBZUAI and CMU, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on representation learning, video understaning, and causal reasoning.
+                            I am currently a Postdoctoral Research Fellow in MBZUAI and CMU, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on causality and representation learning in ML, and video understanding, trajectory prediction, and person re-identification in CV.
                         </p>
                         <p>
                             Prior to that, I received my Ph.D degree at Tsinghua University in 2021, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>; and obtained B.Eng. at Tsinghua University in 2016.
@@ -231,29 +231,27 @@ https://templatemo.com/tm-531-reflux
                         <p>
                             My research interests spans across Computer Vision and Machine Learning. For computer vision, I focus on developing methods to better understand human, which includes person re-identification, trajectory prediction, and action understanding. On the machine learning site, I am interested in causal representation learning and transfer learning.
                         </p>
-                        <!-- representation learning, video understaning, and causal reasoning -->
                     </div>
                     <div class="row">
                         <div class="isotope-wrapper">
                             <form class="isotope-toolbar">
                                 <label><input type="radio" data-type="*" name="isotope-filter" />
                                     <span>All</span></label>
-                                <label><input type="radio" data-type="causality" name="isotope-filter" />
-                                    <span>Causality</span></label>
-                                <label><input type="radio" data-type="representation" checked="" name="isotope-filter" />
-                                    <span>Representation Learning</span></label>
-<!--                                 <label><input type="radio" data-type="trajectory" name="isotope-filter" />
-                                    <span>Trajectory Prediction</span></label> -->
+                                <label><input type="radio" data-type="reid" checked="" name="isotope-filter" />
+                                    <span>Person ReID</span></label>
+                                <label><input type="radio" data-type="trajectory" name="isotope-filter" />
+                                    <span>Trajectory Prediction</span></label>
                                 <label><input type="radio" data-type="action" name="isotope-filter" />
-                                    <span>Video Understanding</span></label>
-
-                       <!--          <label><input type="radio" data-type="adaptation" name="isotope-filter" />
-                                    <span>Transfer Learning</span></label> -->
+                                    <span>Video Analysis</span></label>
+                                <label><input type="radio" data-type="causality" name="isotope-filter" />
+                                    <span>Causal Representaion Learning</span></label>
+                                <label><input type="radio" data-type="adaptation" name="isotope-filter" />
+                                    <span>Transfer Learning</span></label>
                                 <!-- <label><input type="radio" data-type="*" name="isotope-filter" />
                                     <span>All</span></label> -->
                             </form>
                             <div class="isotope-box">
-                                <div class="isotope-item" data-type="action">
+                                <div class="isotope-item" data-type="trajectory">
                                     <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/Bosampler.pdf', '_blank');">
                                         <img src="assets/images/bosampler.png" alt="sq-sample26" />
                                         <figcaption>
@@ -280,7 +278,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="action">
+                                <div class="isotope-item" data-type="trajectory">
                                     <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2203.13777.pdf', '_blank');">
                                         <img src="assets/images/mid.jpg" alt="sq-sample26" />
                                         <figcaption>
@@ -289,7 +287,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="action">
+                                <div class="isotope-item" data-type="reid">
                                     <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/TIP-19329-2018.R2.pdf', '_blank');">
                                         <img src="assets/images/tip19.jpg" alt="sq-sample26" />
                                         <figcaption>
@@ -325,7 +323,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="causality">
+                                <div class="isotope-item" data-type="trajectory">
                                     <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2107.14202.pdf', '_blank');">
                                         <img src="assets/images/causal.png" alt="sq-sample26" />
                                         <figcaption>
@@ -334,7 +332,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="action">
+                                <div class="isotope-item" data-type="trajectory">
                                     <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2107.14204.pdf', '_blank');">
                                         <img src="assets/images/model_dis.png" alt="sq-sample26" />
                                         <figcaption>
@@ -352,7 +350,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="representation">
+                                <div class="isotope-item" data-type="reid">
                                     <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/TIP-24326-2021R2.pdf', '_blank');">
                                         <img src="assets/images/apnet.png" alt="sq-sample26" />
                                         <figcaption>
@@ -361,7 +359,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="action">
+                                <div class="isotope-item" data-type="reid">
                                     <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/0648.pdf', '_blank');">
                                         <img src="assets/images/0648.jpg" alt="sq-sample26" />
                                         <figcaption>
@@ -370,7 +368,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="representation">
+                                <div class="isotope-item" data-type="adaptation">
                                     <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/0645.pdf', '_blank');">
                                         <img src="assets/images/framework_0645.png" alt="sq-sample26" />
                                         <figcaption>
@@ -388,7 +386,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div> -->
-                                <div class="isotope-item" data-type="representation">
+                                <div class="isotope-item" data-type="reid">
                                     <figure class="snip1321" ondblclick="window.open('https://chengy12.github.io/files/1046_camera_ready_final.pdf', '_blank');">
                                         <img src="assets/images/1046.PNG" alt="sq-sample26" />
                                         <figcaption>
@@ -397,7 +395,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="representation">
+                                <div class="isotope-item" data-type="adaptation">
                                     <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2210.01253.pdf', '_blank');">
                                         <img src="assets/images/PLOT.jpg" alt="sq-sample26" />
                                         <figcaption>
@@ -406,7 +404,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="representation">
+                                <div class="isotope-item" data-type="adaptation">
                                     <figure class="snip1321" ondblclick="window.open('https://arxiv.org/pdf/2301.04265.pdf', '_blank');">
                                         <img src="assets/images/advalign.png" alt="sq-sample26" />
                                         <figcaption>
@@ -415,7 +413,7 @@ https://templatemo.com/tm-531-reflux
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="isotope-item" data-type="representation">
+                                <div class="isotope-item" data-type="adaptation">
                                     <figure class="snip1321" ondblclick="window.open('https://denseclip.ivg-research.xyz', '_blank');">
                                         <img src="assets/images/denseclip.jpg" alt="sq-sample26" />
                                         <figcaption>
